--- a/Project 3 - Navigation Bar using Sass/index.html
+++ b/Project 3 - Navigation Bar using Sass/index.html
@@ -42,34 +42,29 @@
                         <li><a href="#">Contact</a></li>
                         <li><a href="#">FaQ</a></li>
                     </ul>
-
-
-
-                    <div class="search">
-                        <form class="input-search">
-                            <label for="search"></label>
-                            <input type="text" name="search" class="searchbar">
-                        </form>
-
-                        <div class="search-icon">
-                            <i class="fa-solid fa-magnifying-glass"></i>
+                    <div class="right-nav">
+                        <div class="nav-search">
+                            <form class="input-search" method="get">
+                                <label for="search"></label>
+                                <input type="text" name="search" class="searchbar" id="search">
+                                <button class="--btn search-icon"><i class="fa-solid fa-magnifying-glass"></i></button>
+                            </form>
                         </div>
-                    </div>
 
-                    <div class="nav-right-icons">
-                        <i class="fa-solid fa-magnifying-glass mobile-search-icon"></i>
-                        <i class="fa-solid fa-user mobileSignInBtn"></i>
-                        <!-- <button class=" mobile-search-icon"><i class="fa-solid fa-magnifying-glass"></i></button>
-                        <button class=" mobileSignInBtn"><i class="fa-solid fa-user"></i></button> -->
-                    </div>
-
-                    <div class="auth">
-                        <button class="--btn --btn-primary signInBtn">Sign In</button>
-                    </div>
+                        <!-- <div class="auth">
+                        </div> -->
+                        <div class="nav-right-icons">
+                            <i class="fa-solid fa-magnifying-glass mobile-search-icon"></i>
+                            <i class="fa-solid fa-user mobileSignInBtn"></i>
+                            <button class="--btn --btn-primary signInBtn auth">Sign In</button>
+                            <!-- <button class=" mobile-search-icon"><i class="fa-solid fa-magnifying-glass"></i></button>
+                            <button class=" mobileSignInBtn"><i class="fa-solid fa-user"></i></button> -->
+                        </div>
+                    </div>                    
                 </div>
 
                 <div class="float-search">
-                    <form class="input-search">
+                    <form class="input-search" method="get">
                         <input type="text" name="search" class="searchbar">
                         <button class="--btn search-icon"><i class="fa-solid fa-magnifying-glass"></i></button>
                     </form>
