--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
           <li class="list-item">
             <a href="Project 5 - Modal Window/">Modal Window</a>
           </li>
+          <li class="list-item">
+            <a href="Project 6 - Pig Game/">Pig Game</a>
+          </li>
         </ol>
       </div>
     </section>
