added back button to each project

--- a/Project 2 - Typing Speed Test Game/index.html
+++ b/Project 2 - Typing Speed Test Game/index.html
@@ -6,10 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Typing Checking Game</title>
+    <link rel="stylesheet" href="../css/main.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
+    <a href="../" class="global-btn global-btn--back" title="back">&lt;--</a>
     <div class="wrapper">
         <div class="text">
             <h1 class="center">Typing Speed Test Game</h1>
