--- a/Project 3 - Navigation Bar using Sass/index.html
+++ b/Project 3 - Navigation Bar using Sass/index.html
@@ -10,6 +10,7 @@
         integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- <link rel="stylesheet" href="assets/icons/fontawesome-free-6.3.0-web/css/all.min.css"> -->
+    <link rel="stylesheet" href="../css/main.css">
     <link rel="stylesheet" href="css/main.css">
 
     <!-- Meta -->
@@ -17,6 +18,7 @@
 </head>
 
 <body>
+    <a href="../" class="global-btn global-btn--back" title="back">&lt;--</a>
     <!-- Header Section Start -->
     <header>
         <nav>
