--- a/Project 5 - Modal Window/index.html
+++ b/Project 5 - Modal Window/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Modal Window</title>
+    <link rel="stylesheet" href="../css/main.css" />
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
+    <a href="../" class="global-btn global-btn--back" title="back">&lt;--</a>
     <div class="btn-wrapper">
       <button class="show-modal">Show modal 1</button>
       <button class="show-modal">Show modal 2</button>
