--- a/Project 6 - Pig Game/index.html
+++ b/Project 6 - Pig Game/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pig Game</title>
+    <link rel="stylesheet" href="../css/main.css">
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <a href="../" class="btn btn-back" title="back">&lt;--</a>
+    <a href="../" class="global-btn global-btn--back" title="back">&lt;--</a>
 
     <main>
       <section class="player player--0 player--active">
