--- a/Project 1 - Emoji Rating/index.html
+++ b/Project 1 - Emoji Rating/index.html
@@ -6,9 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Emoji Rating</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css" integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="../css/main.css">    
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <a href="../" class="global-btn global-btn--back" title="back">&lt;--</a>
     <div class="feedback-container">
         <div class="emoji-container">
             <i class="far fa-angry fa-3x"></i>
