Bug fix and added about model section

--- a/Project 1 - Emoji Rating/index.html
+++ b/Project 1 - Emoji Rating/index.html
@@ -1,33 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Emoji Rating</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css" integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="../css/main.css">    
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css"
+      integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link rel="stylesheet" href="../css/main.css" />
+    <link rel="stylesheet" href="style.css" />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="../images/favicon/favicon-32x32.png"
+    />
+  </head>
+  <body>
     <a href="../" class="global-btn global-btn--back" title="back">&lt;--</a>
     <div class="feedback-container">
-        <div class="emoji-container">
-            <i class="far fa-angry fa-3x"></i>
-            <i class="far fa-frown fa-3x"></i>
-            <i class="far fa-meh fa-3x"></i>
-            <i class="far fa-smile fa-3x"></i>
-            <i class="far fa-laugh fa-3x"></i>            
-        </div>
-        <div class="rating-container">
-            <i class="fas fa-star fa-2x active"></i>            
-            <i class="fas fa-star fa-2x"></i>            
-            <i class="fas fa-star fa-2x"></i>            
-            <i class="fas fa-star fa-2x"></i>            
-            <i class="fas fa-star fa-2x"></i>         
-        </div>
+      <div class="emoji-container">
+        <i class="far fa-angry fa-3x"></i>
+        <i class="far fa-frown fa-3x"></i>
+        <i class="far fa-meh fa-3x"></i>
+        <i class="far fa-smile fa-3x"></i>
+        <i class="far fa-laugh fa-3x"></i>
+      </div>
+      <div class="rating-container">
+        <i class="fas fa-star fa-2x active"></i>
+        <i class="fas fa-star fa-2x"></i>
+        <i class="fas fa-star fa-2x"></i>
+        <i class="fas fa-star fa-2x"></i>
+        <i class="fas fa-star fa-2x"></i>
+      </div>
     </div>
 
     <script src="script.js"></script>
-</body>
+  </body>
 </html>
