--- a/Project 3 - Navigation Bar using Sass/index.html
+++ b/Project 3 - Navigation Bar using Sass/index.html
@@ -12,7 +12,12 @@
     <!-- <link rel="stylesheet" href="assets/icons/fontawesome-free-6.3.0-web/css/all.min.css"> -->
     <link rel="stylesheet" href="../css/main.css">
     <link rel="stylesheet" href="css/main.css">
-
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="../images/favicon/favicon-32x32.png"
+    />
     <!-- Meta -->
     <meta name="theme-color" content="#272727">
 </head>
