--- a/index.html
+++ b/index.html
@@ -5,23 +5,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>HTML, CSS & Js Project</title>
     <link rel="stylesheet" href="css/main.css" />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="./images/favicon/favicon-16x16.png"
+    />
   </head>
   <body>
     <div class="container">
       <h1 class="title">HTML, CSS3 & JavaScript Projects</h1>
 
-      <p>
+      <p class="text-content">
         In this repository, I will share all my projects related to web
         designing and web development. This repository represent all my project
         which I am doing in my 3rd years to get good control over this
         languages.
       </p>
-      <p>
+      <p class="text-content">
         I'm Sanjay Kumar Sah, a web developer in computer science. I am making
         this project as learning prospective and to strength my core knowledge
         of Html, CSS3, SCSS, Javascipt and its library.
       </p>
-      <p>
+      <p class="text-content">
         Every project is started from scratch and finished without using copied
         code.
       </p>
