--- a/Project 2 - Typing Speed Test Game/index.html
+++ b/Project 2 - Typing Speed Test Game/index.html
@@ -8,6 +8,12 @@
     <title>Typing Checking Game</title>
     <link rel="stylesheet" href="../css/main.css">
     <link rel="stylesheet" href="css/style.css">
+      <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="../images/favicon/favicon-32x32.png"
+    />
 </head>
 
 <body>
