--- a/Project 5 - Modal Window/index.html
+++ b/Project 5 - Modal Window/index.html
@@ -6,6 +6,12 @@
     <title>Modal Window</title>
     <link rel="stylesheet" href="../css/main.css" />
     <link rel="stylesheet" href="css/style.css" />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="../images/favicon/favicon-32x32.png"
+    />
   </head>
   <body>
     <a href="../" class="global-btn global-btn--back" title="back">&lt;--</a>
@@ -17,18 +23,19 @@
     <div class="modal hidden">
       <button class="close-modal">&times;</button>
       <h1>I'm a modal window 😍</h1>
-      <p>
+      <p class="text-content">
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo atque nihil
         necessitatibus nemo impedit, aspernatur eius beatae sunt? Voluptatibus,
         dolor quos asperiores corrupti quidem itaque velit aut accusamus sequi
         neque a optio quia cupiditate culpa omnis laborum blanditiis eum
-        molestias. Asperiores vitae aliquid commodi nulla tenetur aut ut quasi
-        magni fugiat animi doloremque unde corporis temporibus rem soluta, illum
-        deleniti nostrum laborum natus omnis. At non veniam eaque officia cumque
-        debitis porro error, vero laborum distinctio reiciendis cupiditate nobis
-        eveniet fugit maxime ratione magni nemo fugiat est delectus minus odit
-        nam, nisi blanditiis. Iste nihil expedita reprehenderit officiis error
-        optio.
+        molestias.
+      </p>
+      <p class="text-content">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo atque nihil
+        necessitatibus nemo impedit, aspernatur eius beatae sunt? Voluptatibus,
+        dolor quos asperiores corrupti quidem itaque velit aut accusamus sequi
+        neque a optio quia cupiditate culpa omnis laborum blanditiis eum
+        molestias.
       </p>
     </div>
     <div class="overlay hidden"></div>
