--- a/Project 6 - Pig Game/index.html
+++ b/Project 6 - Pig Game/index.html
@@ -4,11 +4,55 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pig Game</title>
-    <link rel="stylesheet" href="../css/main.css">
+    <link rel="stylesheet" href="../css/main.css" />
     <link rel="stylesheet" href="css/style.css" />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="../images/favicon/favicon-16x16.png"
+    />
   </head>
   <body>
     <a href="../" class="global-btn global-btn--back" title="back">&lt;--</a>
+    <button class="global-btn global-btn-about show-modal" title="Rules">
+      ℹ️
+    </button>
+    <div class="modal hidden">
+      <button class="close-modal">&times;</button>
+      <h1>PIG GAME 🐗</h1>
+      <p class="text-content">
+        Pig is a simple dice game first described in print by John Scarne in
+        1945.
+      </p>
+      <h2>RULES📃</h2>
+      <p class="text-content">
+        Each turn, a player repeatedly rolls a die until either a 1 is rolled or
+        the player decides to “hold”:
+      </p>
+      <ol class="project-lists">
+        <li class="list-item">
+          If the player rolls a 1, they score nothing and it becomes the next
+          player's turn.
+        </li>
+        <li class="list-item">
+          If the player rolls any other number, it is added to their turn total
+          and the player's turn continues.
+        </li>
+        <li class="list-item">
+          If a player chooses to “hold”, their turn total is added to their
+          score, and it becomes the next player's turn.
+        </li>
+        <li class="list-item">
+          Variation we used, if you roll snake eyes (both 1's), then your total
+          score from past rounds is reset to 0.
+        </li>
+      </ol>
+      <p class="text-content">
+        The first player to score 100 or more points wins.
+      </p>
+    </div>
+    <div class="overlay hidden"></div>
 
     <main>
       <section class="player player--0 player--active">
@@ -41,5 +85,6 @@
       </section>
     </main>
     <script src="js/script.js"></script>
+    <script src="../Project 5 - Modal Window/js/script.js"></script>
   </body>
 </html>
