Bug fix and improved code

--- a/Project 4 - Guess My Number/index.html
+++ b/Project 4 - Guess My Number/index.html
@@ -20,36 +20,19 @@
     </button>
     <div class="modal hidden">
       <button class="close-modal">&times;</button>
-      <h1>PIG GAME 🐗</h1>
+      <h1>Guess the number 🔢</h1>
       <p class="text-content">
-        Pig is a simple dice game first described in print by John Scarne in
-        1945.
+        Your goal is to guess the number the game has in mind.
       </p>
       <h2>RULES📃</h2>
       <p class="text-content">
-        Each turn, a player repeatedly rolls a die until either a 1 is rolled or
-        the player decides to “hold”:
-      </p>
-      <ol class="project-lists">
-        <li class="list-item">
-          If the player rolls a 1, they score nothing and it becomes the next
-          player's turn.
-        </li>
-        <li class="list-item">
-          If the player rolls any other number, it is added to their turn total
-          and the player's turn continues.
-        </li>
-        <li class="list-item">
-          If a player chooses to “hold”, their turn total is added to their
-          score, and it becomes the next player's turn.
-        </li>
-        <li class="list-item">
-          Variation we used, if you roll snake eyes (both 1's), then your total
-          score from past rounds is reset to 0.
-        </li>
-      </ol>
+        The rules of this game are straightforward.
+      </p>     
       <p class="text-content">
-        The first player to score 100 or more points wins.
+        For every number you guess, if you didn't guess the number correctly, you will be told whether your guess is greater than or less than the actual number the game has in mind. With that information, you make another guess to get closer to the answer.
+      </p>
+      <p class="text-content">
+        The idea is that, with each answer on where your guess falls, you can narrow down on the correct answer until you eventually guess the correct answer exactly:
       </p>
     </div>
     <div class="overlay hidden"></div>
