--- a/index.html
+++ b/index.html
@@ -58,6 +58,9 @@
           <li class="list-item">
             <a href="Project 6 - Pig Game/">Pig Game</a>
           </li>
+          <li class="list-item">
+            <a href="Project 7 - Bankist">Bankist</a>
+          </li>
         </ol>
       </div>
     </section>
