added transaction & loan summary section & updated readme

--- a/Project 7 - Bankist/index.html
+++ b/Project 7 - Bankist/index.html
@@ -337,7 +337,24 @@
         </div>
       </aside>
 
-      <footer class="footer__container"></footer>
+      <footer class="footer__container card">
+        <div class="transaction__summary footer__container-section">
+          <div class="card__title">
+            <p class="md__text">Total Deposit</p>
+            <p class="sm__text" id="total__deposit">$100</p>
+          </div>
+          <div class="card__title total_withdrawn">
+            <p class="md__text">Total Withdrawn</p>
+            <p class="sm__text" id="total__withdrawn">$ 400.00</p>
+          </div>
+        </div>
+        <div class="loan__summary footer__container-section">
+          <div class="card__title">
+            <p class="md__text">Loan Amount</p>
+            <p class="sm__text" id="loan__amount">$100</p>
+          </div>
+        </div>
+      </footer>
     </div>
     <script src="js/script.js"></script>
   </body>
