--- a/Project 1 - Emoji Rating/index.html
+++ b/Project 1 - Emoji Rating/index.html
@@ -32,11 +32,11 @@
         <i class="far fa-laugh fa-3x"></i>
       </div>
       <div class="rating-container">
-        <i class="fas fa-star fa-2x active"></i>
-        <i class="fas fa-star fa-2x"></i>
-        <i class="fas fa-star fa-2x"></i>
-        <i class="fas fa-star fa-2x"></i>
-        <i class="fas fa-star fa-2x"></i>
+        <i class="fas fa-star fa-2x active" data-index="0"></i>
+        <i class="fas fa-star fa-2x" data-index="1"></i>
+        <i class="fas fa-star fa-2x" data-index="2"></i>
+        <i class="fas fa-star fa-2x" data-index="3"></i>
+        <i class="fas fa-star fa-2x" data-index="4"></i>
       </div>
     </div>
 
