use js to create dom element and fix exponitial rendering on change user

--- a/Project 7 - Bankist/index.html
+++ b/Project 7 - Bankist/index.html
@@ -351,7 +351,7 @@
         <div class="loan__summary footer__container-section">
           <div class="card__title">
             <p class="md__text">Loan Amount</p>
-            <p class="sm__text" id="loan__amount">$100</p>
+            <p class="sm__text" id="loan__amount">0</p>
           </div>
         </div>
       </footer>
