spell check and add gitignore file

--- a/Project 4 - Guess My Number/index.html
+++ b/Project 4 - Guess My Number/index.html
@@ -45,7 +45,7 @@
           <p>&lt;Between 1 and 20&gt;</p>
         </div>
       </nav>
-      <h1 class="title">Guess My Numebr</h1>
+      <h1 class="title">Guess My Number</h1>
     </header>
     <div class="secretNumberContainer">
       <p class="secretNumber">?</p>
@@ -64,7 +64,7 @@
             💯 Score: <span class="score" id="score">20</span>
           </p>
           <p class="label-highscore">
-            🏆 Highscore: <span class="highscore" id="highscore">0</span>
+            🏆 High score: <span class="highscore" id="highscore">0</span>
           </p>
         </div>
       </section>
