--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <p class="text-content">
         I'm Sanjay Kumar Sah, a web developer in computer science. I am making
         this project as learning prospective and to strength my core knowledge
-        of Html, CSS3, SCSS, Javascipt and its library.
+        of Html, CSS3, SCSS, Javascript and its library.
       </p>
       <p class="text-content">
         Every project is started from scratch and finished without using copied
@@ -37,7 +37,7 @@
         <h2 class="title">My Projects</h2>
         <ol class="project-lists">
           <li class="list-item">
-            <a href="Project 1 - Emoji Rating/index.html">Emoji Rating</a>
+            <a href="Project 1 - Emoji Rating">Emoji Rating</a>
           </li>
           <li class="list-item">
             <a href="Project 2 - Typing Speed Test Game"
@@ -46,17 +46,17 @@
           </li>
           <li class="list-item">
             <a href="Project 3 - Navigation Bar using Sass"
-              >Navigation Bar Uisng Sass</a
+              >Navigation Bar Using Sass</a
             >
           </li>
           <li class="list-item">
             <a href="Project 4 - Guess My Number">Guess the Number</a>
           </li>
           <li class="list-item">
-            <a href="Project 5 - Modal Window/">Modal Window</a>
+            <a href="Project 5 - Modal Window">Modal Window</a>
           </li>
           <li class="list-item">
-            <a href="Project 6 - Pig Game/">Pig Game</a>
+            <a href="Project 6 - Pig Game">Pig Game</a>
           </li>
         </ol>
       </div>
