--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <p class="text-content">
         I'm Sanjay Kumar Sah, a web developer in computer science. I am making
         this project as learning prospective and to strength my core knowledge
-        of Html, CSS3, SCSS, Javascipt and its library.
+        of Html, CSS3, SCSS, Javascript and its library.
       </p>
       <p class="text-content">
         Every project is started from scratch and finished without using copied
@@ -46,7 +46,7 @@
           </li>
           <li class="list-item">
             <a href="Project 3 - Navigation Bar using Sass"
-              >Navigation Bar Uisng Sass</a
+              >Navigation Bar Using Sass</a
             >
           </li>
           <li class="list-item">
@@ -57,9 +57,6 @@
           </li>
           <li class="list-item">
             <a href="Project 6 - Pig Game/">Pig Game</a>
-          </li>
-          <li class="list-item">
-            <a href="Project 7 - Bankist">Bankist</a>
           </li>
         </ol>
       </div>
