--- a/Project-9-Forkify/index.html
+++ b/Project-9-Forkify/index.html
@@ -11,7 +11,7 @@
     <link rel="shortcut icon" href="src/img/favicon.png" type="image/x-icon" />
 
     <link rel="stylesheet" href="src/sass/main.scss" />
-    <script defer src="src/js/controller.js"></script>
+    <script type="module" defer src="src/js/controller.js"></script>
 
     <title>Forkify | Search over 1,000,000 recipes</title>
   </head>
@@ -71,7 +71,13 @@
       </header>
 
       <div class="search-results">
-        <ul class="results"></ul>
+        <ul class="results">
+          <a href="#5ed6604591c37cdc054bcc13">
+            CAULIFLOWER PIZZA CRUST (WITH BBQ CHICKEN PIZZA)
+          </a>
+          <br />
+          <a href="#5ed6604591c37cdc054bcac4">PIZZA DIP</a>
+        </ul>
 
         <div class="pagination"></div>
 
