update home page

--- a/index.html
+++ b/index.html
@@ -14,22 +14,74 @@
   </head>
   <body>
     <div class="container">
-      <h1 class="title">HTML, CSS3 & JavaScript Projects</h1>
-
-      <p class="text-content">
-        In this repository, I will share all my projects related to web
-        designing and web development. This repository represent all my project
-        which I am doing in my 3rd years to get good control over this
-        languages.
+      <h1 id="sanjay-kumar-sah-s-web-development-projects-repository">
+        Sanjay Kumar Sah&#39;s Web Development Projects Repository
+      </h1>
+      <p>
+        Welcome to my web development projects repository! Here, you will find a
+        collection of projects that I have worked on during my learning journey,
+        internships, and job experiences. These projects focus on HTML, CSS3,
+        and JavaScript, reflecting my progress and growth in these essential web
+        development technologies.
       </p>
-      <p class="text-content">
-        I'm Sanjay Kumar Sah, a web developer in computer science. I am making
-        this project as learning prospective and to strength my core knowledge
-        of Html, CSS3, SCSS, Javascript and its library.
+      <h2 id="about-me">About Me</h2>
+      <p>
+        I&#39;m Sanjay Kumar Sah, a passionate web developer with a background
+        in computer science. I&#39;ve embarked on this project for two primary
+        reasons:
       </p>
-      <p class="text-content">
-        Every project is started from scratch and finished without using copied
-        code.
+      <ol>
+        <li>
+          <p>
+            <strong>Learning Perspective</strong>: These projects serve as a
+            record of my continuous learning in web development. They showcase
+            my evolving skills and knowledge over time.
+          </p>
+        </li>
+        <li>
+          <p>
+            <strong>Strengthening Core Knowledge</strong>: By starting each
+            project from scratch and refraining from using copied code, I aim to
+            strengthen my core understanding of HTML, CSS3, SCSS, JavaScript,
+            and relevant libraries. This practice helps me develop a deep
+            comprehension of these technologies.
+          </p>
+        </li>
+      </ol>
+      <h2 id="project-list">Project List</h2>
+      <p>
+        You can explore the projects I&#39;ve worked on in this repository. Each
+        project is categorized and well-documented. Feel free to browse through
+        them, learn from the code, and provide feedback if you have any
+        suggestions.
+      </p>
+      <p>
+        Please note that while the projects are intended to showcase my growth,
+        they may not represent perfect solutions. I&#39;m continually learning
+        and improving, and your insights are valuable to me.
+      </p>
+      <h2 id="contact">Contact</h2>
+      <p>
+        If you have any questions, suggestions, or just want to connect,
+        don&#39;t hesitate to reach out:
+      </p>
+      <ul>
+        <li>
+          Email:
+          <a href="mailto:sanjay8797421521@gmail.com"
+            >sanjay8797421521@gmail.com</a
+          >
+        </li>
+        <li>
+          LinkedIn:
+          <a href="https://www.linkedin.com/in/sanjaysah101"
+            >Sanjay Kumar Sah</a
+          >
+        </li>
+      </ul>
+      <p>
+        Thank you for visiting my repository, and I hope you find my web
+        development journey interesting and informative!
       </p>
     </div>
     <section class="project-section">
@@ -57,6 +109,9 @@
           </li>
           <li class="list-item">
             <a href="Project 6 - Pig Game">Pig Game</a>
+          </li>
+          <li class="list-item">
+            <a href="Project 7 - Bankist">Bankist</a>
           </li>
         </ol>
       </div>
